
2013-05-03  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi_private.h: Remove update forward declaration from avrftdi_print to
	avrftdi_log.
	* avrftdi_tpi.c: Do all I/O in terms of pgm->cmd_tpi()-calls instead of
	avrftdi_tpi_[read,write]_byte().
	Remove unnecessary set_pin call to set MOSI high, speeds up I/O.
	Removes SKEY array, moves it to tpi.h.
	* avr.c: Adds avr_tpi_chip_erase() generic TPI chip erase function.
	Adds avr_tpi_program_enable() - generic TPI external programming enable
	function. Sets guard time, reads identification register, sends SKEY command
	and key, checks NVMEN bit. The required guard time has to be passed as
	parameter.
	* tpi.h: Adds SKEY array including CMD_SKEY in "correct" order.

2013-05-02  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi_private.h: Add libusb-1.0 include to fix include order in windows.
	* NEWS: Add notice avrftdi supporting TPI
	* avr.c: Fix avr_tpi_poll_nvmbsy() - poll read data instead of return code
	* avrftdi_private.h, avrftdi.c: move logging #defines to from avrftdi.c to
	avrftdi_private.h, so that they are available for avrftdi_tpi, too.

2013-04-30  Hannes Weisbach <hannes_weisbach@gmx.net>

	* tpi.h: Add definition for TPI Identification Code
	* avrftdi_tpi.c: Add TPI-support for FTDI-based programmers
	* avrftdi_private.h: Add common include file for FTDI-based programmers

2013-04-28  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdic: Rework of textual output. Messages are divided by severity and
	printed accordingly to the verbosity,	as specified by the user. The provided
	severity level are (ERROR, WARN, INFO, DEBUG, TRACE). Where "ERROR" messages
	are always printed. Shortcut-macros	including function, from which the
	output was generated, and line number were also added.
	Some log messages were updated and other code warnings removed.

2013-04-27  Hannes Weisbach <hannes_weisbach@gmx.net>

	* configure.ac: Add libftdi1 library check, remove TYPE_232H DECL check